--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -15,11 +15,10 @@ System{% endblock %} {% block content %} {% load humanize %}
   class="container mx-auto flex flex-col md:flex-row justify-center items-center my-12 md:my-24"
 >
   <div style="text-align: center" class="lg:w-1/3 lg:py-6">
-    {% if request.user.account.profile_image and
-    request.user.account.profile_image.url %}
-    <img class="rounded" src="{{ request.user.account.profile_image.url }}" />
+    {% if request.user.account.profile_image and request.user.account.profile_image.url %}
+      <img class="rounded" src="{{ request.user.account.profile_image.url }}" />
     {% else %}
-    <p>No profile image available</p>
+      <p>No profile image available</p>
     {% endif %}
   </div>
 
